--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -31,7 +31,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.0.0-beta2'
-
-    compile project(':xtion-lib-base')
-//    compile 'com.xuanwu.apaas.lib:base:1.4.2'
+    implementation 'com.google.code.gson:gson:2.8.3'
+    compile project(':library')
 }
